--- a/AdmPersonalTrainer/AdmPersonalTrainer/Iniciar Sesion.resx
+++ b/AdmPersonalTrainer/AdmPersonalTrainer/Iniciar Sesion.resx
@@ -120,46 +120,46 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAK+SURBVGhD7ZlBbtRAEEUnyY6QKMfgDByAHeEWEVICCVyA
-        G6DsWJFDsGGLIuAOicKewBIJWDG876kaTKdnptvdPSjCTyrZ0+X6VdXt8dieycjIyH/KdDq9a7tFoHMf
-        28c2bKgdJNnEnmNfMXGF7Zs7G2IPsV8SgkMbbgMJVPzrLtXfqIAndlgyxBxZrPPCXPVBPFb8T9uKrCY4
-        Niz+A7Zjbvnn+8UgFiten/cwJXaSmuCYhcWz3cDeYvK/wja7oKGYoIT6nGGdMNtt7J0GDSV+2gVHwHdg
-        xzgqftfc8u92o3/QRA1rQoEm0OeGIJ93sJUrwVg48++xG6cKY+GEDWuCIF1t+sxnPoTxpSvB/tKZ78N4
-        bNVPzJ0OQX6pFCtnAX90JbCkme+DP1z9a3OlQYCKcb5je+ZaCsfFmsgq3uE4XSR+KMjI++EkQD9SjopK
-        TRw24eQUH2pcmCsdgh5h4Xk7tICS4lXDsF97AnUOlzRxapYak3VZTgKB8AryEYteQUpAs37xDkJNm0Cr
-        XfEOgk2aQKN98Q7CVZsgdn3FOyQY/MXuoxiLdaSZfVs+CCWyhM6puZIh5uUstGN9xTtKaInF7WtAkPQB
-        psfCOzaUDDH/7hSqBQWv9Qr0GPuGvcG2bLgYtNqvhARN2Llnriqg164JCZmgc45VWwEHzfpNSMCEHCVo
-        eTNXrwkCa95Ol8SqhvzbaYI+deEzSgpwSjQuzZUGARJwaj5S5jRR/Ej5ZRbXUfJQn/09wh8+1H82VzoE
-        PZvFzqn5WmXhXSzjsdcqx+ZOh6DaL7ZWrgSfk3ImQ2DrV4vzlWC7NNdgJIDFZmXoy93YSkir3syHSMgE
-        +5S8Xg+b6GuJesU7CMaWWKiQ7DtIYsLTySk/bRYhYewEu8bEJfbQ3NkQq//GpCGkeYy1KT6ERNu2W0xN
-        rZGRkVvFZPIbMBavjnXekawAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAr5JREFUaEPtmUFu1EAQRSfJjpAox+AMHIAd4RYRUgIJXIAboOxYkUOwYYsi4A6J
+        wp7AEglYMbzvqRpMp2em2909KMJPKtnT5fpV1e3x2J7JyMjIf8p0Or1ru0Wgcx/bxzZsqB0k2cSeY18x
+        cYXtmzsbYg+xXxKCQxtuAwlU/Osu1d+ogCd2WDLEHFms88Jc9UE8VvxP24qsJjg2LP4DtmNu+ef7xSAW
+        K16f9zAldpKa4JiFxbPdwN5i8r/CNrugoZighPqcYZ0w223snQYNJX7aBUfAd2DHOCp+19zy73ajf9BE
+        DWtCgSbQ54Ygn3ewlSvBWDjz77Ebpwpj4YQNa4IgXW36zGc+hPGlK8H+0pnvw3hs1U/MnQ5BfqkUK2cB
+        f3QlsKSZ74M/XP1rc6VBgIpxvmN75loKx8WayCre4ThdJH4oyMj74SRAP1KOikpNHDbh5BQfalyYKx2C
+        HmHheTu0gJLiVcOwX3sCdQ6XNHFqlhqTdVlOAoHwCvIRi15BSkCzfvEOQk2bQKtd8Q6CTZpAo33xDsJV
+        myB2fcU7JBj8xe6jGIt1pJl9Wz4IJbKEzqm5kiHm5Sy0Y33FO0poicXta0CQ9AGmx8I7NpQMMf/uFKoF
+        Ba/1CvQY+4a9wbZsuBi02q+EBE3YuWeuKqDXrgkJmaBzjlVbAQfN+k1IwIQcJWh5M1evCQJr3k6XxKqG
+        /Ntpgj514TNKCnBKNC7NlQYBEnBqPlLmNFH8SPllFtdR8lCf/T3CHz7UfzZXOgQ9m8XOqflaZeFdLOOx
+        1yrH5k6HoNovtlauBJ+TciZDYOtXi/OVYLs012AkgMVmZejL3dhKSKvezIdIyAT7lLxeD5voa4l6xTsI
+        xpZYqJDsO0hiwtPJKT9tFiFh7AS7xsQl9tDc2RCr/8akIaR5jLUpPoRE27ZbTE2tkZGRW8Vk8hswFq+O
+        dd6RrAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAASUSURBVGhD7ZpJzJ1TGMc/1BSE0iKGGFaqpaKJtHuiJOaV
-        YtnoqiibbhArbVi1qBALq8bSUMPCkIiZ0IihhkhRYkgTiZqH3+/Gk5y89x3OOfd+n5L+k1+++957nvc8
-        957peZ73m9mn/7GOgkthIzwG78O38NM/+Po9eBRscwkcCXuFDoZr4Cn4Hf4qRJsnYRV4rznXIbAOvoRw
-        6md4Hm6DK2AxHAO2FV8vgSvBNi/ALxD2X8CNYNs50UXwMYQDb8L1MB9KpY22b0Hc7yO4EGZN/lL3QnRo
-        5ythGtoP/IHehrj/Jpj6dDsO3gA72AM3wAEwbc2Dm8DNwb5eg2NhKjoVHG5v/AGcBX1aBOvhOfgE/OI/
-        wqfwMKyAIS2FHWCf/tWHieRIxJd4BVywXVoAD8EfYPsu/oQ7wPZ98vNXQRu/TPXIuCZiOr0Mh0OX7ORd
-        SB0e4je4Hw6DLtlnfBmnWdWauQ+8gdOpbyT2hxchdbIEbQ+CLjkyMc02+0aJLgYNnd9Da+IqSB2r4Rbo
-        0zkQG0D21nwouEg1WusbAzIcSZ2q4TMYkruZbR2drCl2M2jgOTG0xbr//wCpU7WcDn1ya34HbOv23ysX
-        eIQdOUO4EFJnJuF8GFJMecOZ3lG5FmzobpWj4yF1ZhIuhyE5AyKcudo3uvQM2Gj16GpYbrupM5OQu4jX
-        gO23ja5aZABnWG0Ua26RoyPAA67pVA1nQI6OBqNmz6HWfMah9YbPjq7ytROaTpViNFASvpsCaGdyNqa7
-        wA9vHV3lyyFOnaphO5TodtDOTHNMj4MfXja6ytc9kDpVgzFaiUzctDNtHlOEAUavuTI8+QpSp2rYBd4r
-        V2af2hk+jel78EMXU65smzo0CSX9xvn1zeiqocif+wK4pg4E47HUoRrcKUsiW9uG3ZhqvoiygpI6VYOV
-        lBLFF9HnMdVMLbUMzABTx0rQ9lwokaG9tt+NrhqKxZ57MKWKXaQGbUt1JmjbutjjPCjdfpVD7cJLHczh
-        ayidyioOb4+MMd0Nflh6IIZMjlInc7DIVyMLfNq3Hoi1IUrIHex1SB3twxzcHKNGVjS9R2uIYl5uIFYS
-        NDZ1EjQd7uJEqFEEjb9Cp59Pg53khvFNOSpNh7uoHQ1LrNo/Mbrq0HVgI5OXGlm+SZ3to6+81KU0sfIp
-        QKfcfSLVranrngaps33YtlSR6n4Og7td7D4WlEuG37Km1cjU2T4s+p0CudIXw31tffwwKEclykE5BufB
-        A1BzumvzICyHIblVa+PBnX32OISmsBbFzvaNhgwRrHmljwEmxV/b2lVbjTcKdPpUPOWjZPohRMHZKvlW
-        iABzNnBbfQR0XhmyRyHdZybFsuIYBWTns5ngUKV9mtjXFoh19xJUP5azbuVzjWYnc41r1kccE+lkiKH9
-        N/CHrNmqW3UClGyt08Lp5KyYqpyfztlpFeT6sA/XpEfBrMntbzbXjY++L4A5kb+Ue75lnDZnajA08nFB
-        TaI1sezUf7+wAOH+3+ZgH55HFh6srBs57xWyCG5ytgFMm/0Hmt0QTvva9/zsTjClrvlviX36D2hm5m8c
-        c4TRkeiISgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAABJRJREFUaEPtmknMnVMYxz/UFITSIoYYVqqloom0e6Ik5pVi2eiqKJtuECttWLWo
+        EAurxtJQw8KQiJnQiKGGSFFiSBOJmoff78aTnLz3Hc45936fkv6TX7773nue9zz3nul5nveb2af/sY6C
+        S2EjPAbvw7fw0z/4+j14FGxzCRwJe4UOhmvgKfgd/ipEmydhFXivOdchsA6+hHDqZ3geboMrYDEcA7YV
+        Xy+BK8E2L8AvEPZfwI1g2znRRfAxhANvwvUwH0qljbZvQdzvI7gQZk3+UvdCdGjnK2Ea2g/8gd6GuP8m
+        mPp0Ow7eADvYAzfAATBtzYObwM3Bvl6DY2EqOhUcbm/8AZwFfVoE6+E5+AT84j/Cp/AwrIAhLYUdYJ/+
+        1YeJ5EjEl3gFXLBdWgAPwR9g+y7+hDvA9n3y81dBG79M9ci4JmI6vQyHQ5fs5F1IHR7iN7gfDoMu2Wd8
+        GadZ1Zq5D7yB06lvJPaHFyF1sgRtD4IuOTIxzTb7RokuBg2d30Nr4ipIHavhFujTORAbQPbWfCi4SDVa
+        6xsDMhxJnarhMxiSu5ltHZ2sKXYzaOA5MbTFuv//AKlTtZwOfXJrfgds6/bfKxd4hB05Q7gQUmcm4XwY
+        Ukx5w5neUbkWbOhulaPjIXVmEi6HITkDIpy52je69AzYaPXoalhuu6kzk5C7iNeA7beNrlpkAGdYbRRr
+        bpGjI8ADrulUDWdAjo4Go2bPodZ8xqH1hs+OrvK1E5pOlWI0UBK+mwJoZ3I2prvAD28dXeXLIU6dqmE7
+        lOh20M5Mc0yPgx9eNrrK1z2QOlWDMVqJTNy0M20eU4QBRq+5Mjz5ClKnatgF3itXZp/aGT6N6XvwQxdT
+        rmybOjQJJf3G+fXN6KqhyJ/7ArimDgTjsdShGtwpSyJb24bdmGq+iLKCkjpVg5WUEsUX0ecx1UwttQzM
+        AFPHStD2XCiRob22342uGorFnnswpYpdpAZtS3UmaNu62OM8KN1+lUPtwksdzOFrKJ3KKg5vj4wx3Q1+
+        WHoghkyOUidzsMhXIwt82rceiLUhSsgd7HVIHe3DHNwco0ZWNL1Ha4hiXm4gVhI0NnUSNB3u4kSoUQSN
+        v0Knn0+DneSG8U05Kk2Hu6gdDUus2j8xuurQdWAjk5caWb5Jne2jr7zUpTSx8ilAp9x9ItWtqeueBqmz
+        fdi2VJHqfg6Du13sPhaUS4bfsqbVyNTZPiz6nQK50hfDfW19/DAoRyXKQTkG58EDUHO6a/MgLIchuVVr
+        48GdffY4hKawFsXO9o2GDBGseaWPASbFX9vaVVuNNwp0+lQ85aNk+iFEwdkq+VaIAHM2cFt9BHReGbJH
+        Id1nJsWy4hgFZOezmeBQpX2a2NcWiHX3ElQ/lrNu5XONZidzjWvWRxwT6WSIof038Ies2apbdQKUbK3T
+        wunkrJiqnJ/O2WkV5PqwD9ekR8Gsye1vNteNj74vgDmRv5R7vmWcNmdqMDTycUFNojWx7NR/v7AA4f7f
+        5mAfnkcWHqysGznvFbIIbnK2AUyb/Qea3RBO+9r3/OxOMKWu+W+JffoPaGbmbxxzhNGR6IhKAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="pictureBox3.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -190,22 +190,21 @@
   </data>
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAMmSURBVGhD7drHitVQAMbxWVmwoGBbKLoU3apPIIqo6NLy
-        DKL4FlYURXDrE9hHn8CCa3sBy8YGCnZRvz/eQJh8Oefk3OTmMswHPwj3lCSTdnIyEzOZxlksu+WYXJOH
-        8lF+DLD8QCijzi5ZJGOR2bJfbspv+dsQbSZln9DXyDNXDssbcRuY47UckjkykmyTp+I2pg1PZKt0Fg79
-        aXEr78IF4ci3muVyT9wKu3RXlkkrWSMcbreiUXgsbMNQWSrcRt0KRolrcoVkhbtHH6dTHU6zrFv0OXEd
-        pvgix2WjzBvYJCfkq7g2Kc5Io3CLdR2leC5rpS7r5IW4tim2SFK45eU+JzgSxU6sl0vyeYBldoJQ9k1c
-        HzFc/EmnGE9s10EKTifChn6SqeX8VuzMSZlanuqgBMOeDjPs2CCEv74rx0UhXDOuPMUrCR4VBoCuYar5
-        QjiVXDk4KmSBuPJUe6U2jGJdo1RFXFlZEVeWitcBG94ncobiZUVcWVkRV5bqlyyUSngpcg3G2Q6phDuO
-        qzzOjkolV8VVjuFcXSm5oe11cX3HXJFKeNC4yjHD7ESRVeL6jmFAW8kHcZVj2orrO+atVMJMh6sc01Zc
-        3zHfpZIudmS7MKnAk5iBaCiu7xi7I+/FVY4JhR0o6r3kh0DKfaZ6J5U8Elc5JpRnUtRjOZRyn6mY8Ksk
-        9/YbymYp6rEcSrnPVJelEqYxXeWYWJrWa+KIVMJcrKscE8sdufV/MRjXd4wdojChnDNobCuu75CfYgeN
-        5Ia4RiFtxfUdwjVdG2bFXaOQvoYoe6Q2vD7yAHMN6zDgY0NyQ1s+Lbi+6/BMmiXBMLXvGo+TAxINR2Uc
-        pknrJE8HEb5PuE769kdiD9ZKzorrrE+npHE4fEwcuw77cFuiF3hdlsi4fFbgY9NQ4SNL7mtwGxiVr5ZW
-        wuevPk4zTic+NrUarhk+hnLncCtt23lJvs3mhO8TXZ5qXJONb7G54S/F1H75VXZYDDt4Ynd6FOrCSpkV
-        Z5KOuVi3gSG0YRTLADD71tp2eDfYKUxjMgPI+zQTGsU/1bB8X3g95c2OlyI+LcxkGmZi4h+q5WXmsprF
-        5gAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAyZJREFUaEPt2seK1VAAxvFZWbCgYFsouhTdqk8giqjo0vIMovgWVhRFcOsT2Eef
+        wIJrewHLxgYKdlG/P95AmHw55+Tc5OYyzAc/CPeUJJN2cjITM5nGWSy75Zhck4fyUX4MsPxAKKPOLlkk
+        Y5HZsl9uym/52xBtJmWf0NfIM1cOyxtxG5jjtRySOTKSbJOn4jamDU9kq3QWDv1pcSvvwgXhyLea5XJP
+        3Aq7dFeWSStZIxxut6JReCxsw1BZKtxG3QpGiWtyhWSFu0cfp1MdTrOsW/Q5cR2m+CLHZaPMG9gkJ+Sr
+        uDYpzkijcIt1HaV4LmulLuvkhbi2KbZIUrjl5T4nOBLFTqyXS/J5gGV2glD2TVwfMVz8SacYT2zXQQpO
+        J8KGfpKp5fxW7MxJmVqe6qAEw54OM+zYIIS/vivHRSFcM648xSsJHhUGgK5hqvlCOJVcOTgqZIG48lR7
+        pTaMYl2jVEVcWVkRV5aK1wEb3idyhuJlRVxZWRFXluqXLJRKeClyDcbZDqmEO46rPM6OSiVXxVWO4Vxd
+        Kbmh7XVxfcdckUp40LjKMcPsRJFV4vqOYUBbyQdxlWPaius75q1UwkyHqxzTVlzfMd+lki52ZLswqcCT
+        mIFoKK7vGLsj78VVjgmFHSjqveSHQMp9pnonlTwSVzkmlGdS1GM5lHKfqZjwqyT39hvKZinqsRxKuc9U
+        l6USpjFd5ZhYmtZr4ohUwlysqxwTyx259X8xGNd3jB2iMKGcM2hsK67vkJ9iB43khrhGIW3F9R3CNV0b
+        ZsVdo5C+hih7pDa8PvIAcw3rMOBjQ3JDWz4tuL7r8EyaJcEwte8aj5MDEg1HZRymSeskTwcRvk+4Tvr2
+        R2IP1krOiuusT6ekcTh8TBy7DvtwW6IXeF2WyLh8VuBj01DhI0vua3AbGJWvllbC568+TjNOJz42tRqu
+        GT6GcudwK23beUm+zeaE7xNdnmpck41vsbnhL8XUfvlVdlgMO3hid3oU6sJKmRVnko65WLeBIbRhFMsA
+        MPvW2nZ4N9gpTGMyA8j7NBMaxT/VsHxfeD3lzY6XIj4tzGQaZmLiH6rlZeaymsXmAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="pictureBox4.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
