Funcion Actualizar Cuenta

--- a/AdmPersonalTrainer/AdmPersonalTrainer/Inicio.resx
+++ b/AdmPersonalTrainer/AdmPersonalTrainer/Inicio.resx
@@ -480,7 +480,7 @@
         4gs3W3gAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnEstadoCuenta.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         EwAACxMBAJqcGAAABCxJREFUaEPVmluoFVUYx083qLArFUUQWNmFCivsBvYWKApFDyEaVEgURPTQgw8i
