--- a/AdmPersonalTrainer/AdmPersonalTrainer/Inicio.resx
+++ b/AdmPersonalTrainer/AdmPersonalTrainer/Inicio.resx
@@ -457,7 +457,7 @@
         LyQ9rcCIPwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnRutina.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         EwAACxMBAJqcGAAAA+tJREFUaEPtmUmIFVcUhlvFiEI0KOJGEElEAyGoWxEFQRcS1ChGjLgRgoku3ARR
